--- a/views/index.html
+++ b/views/index.html
@@ -150,6 +150,18 @@
           </div>
         </div>
       </div>
+      <div class="flip-box-sanctuary-watch col-md-3 col-xs-6">
+        <div class="flip-box-inner-sanctuary-watch new-design">
+          <div class="flip-box-front-sanctuary-watch">
+            <h1>Sanctuary Watch</h1>
+          </div>
+          <div class="flip-box-back-sanctuary-watch">
+            <h2>Sanctuary Watch</h2>
+            <p>Ecosystem tracking and conservation tools to inform sanctuary management.</p>
+            <button><a href="https://sanctuarywatch.ioos.us/">Learn More</a></button>
+          </div>
+        </div>
+      </div>
       <div class="flip-box-compliance-checker col-md-3 col-xs-6">
         <div class="flip-box-inner-compliance-checker new-design">
           <div class="flip-box-front-compliance-checker">
@@ -174,6 +186,10 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
       <div class="flip-box-comt col-md-3 col-xs-6">
         <div class="flip-box-inner-comt new-design">
           <div class="flip-box-front-comt">
@@ -186,10 +202,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
       <div class="flip-box-video-portal col-md-3 col-xs-6">
         <div class="flip-box-inner-video-portal new-design">
           <div class="flip-box-front-video-portal">
@@ -226,7 +238,11 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-oa col-md-3 col-xs-6">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="flip-box-oa col-centered col-md-3 col-xs-6">
         <div class="flip-box-inner-oa new-design">
           <div class="flip-box-front-oa">
             <h1>Ocean Acidification</h1>
