update contact us email

--- a/views/contact-us.html
+++ b/views/contact-us.html
@@ -8,7 +8,7 @@
             <p itemprop="address">1315 East-West Highway,<br>2nd Floor<br>Silver Spring, MD 20910</p>
             <p itemprop="telephone"><a href="tel:240533-9444"> (240) 533-9444</a></p>
           </div>
-          <a href="mailto:ioos.catalog@noaa.gov" itemprop="email">webmaster.ioos.us@noaa.gov</a>
+          <a href="mailto:webmaster.ioos.us@noaa.gov" itemprop="email">webmaster.ioos.us@noaa.gov</a>
         </div>
         <div class="col-md-6">
           <p>GliderDAC</p>
